# CodeRunr

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.lambda  Dockerfile.server  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  lambda_handler.py  main.py  pyproject.toml
config/: __init__.py  aws.py  celery.py  logging.py  sandbox.py  settings.py
db/: session.py
db/alembic/: env.py
db/alembic/versions/: 1a1fa6239439_.py
db/models/: __init__.py  language.py  submission.py  submission_batch.py
db/repository/: languages.py  submissions.py
db/seeds/: languages.py
exceptions/: error_handler.py
routes/: __init__.py  languages.py  submissions.py
sandbox/: config.py  isolate.py  schema.py
sandbox/isolate_conf/: isolate.conf
schema/: __init__.py  language.py  submission.py
scripts/: init-localstack.sh  server.sh  test-lambda-local.sh  worker.docker.sh  worker.sh
tests/: conftest.py  test_api_routes.py  test_error_handler.py  test_lambda_handler.py  test_main_app.py  test_repository.py  test_sandbox.py  test_utils.py  test_worker.py
utils/: http_util.py  security.py  ssrf_guard.py
worker/: celery.py  tasks.py
