[project]
name = "CodeRunr"
version = "0.1.0"
description = "CodeRunr: Code compilation and sandboxes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "alembic>=1.18.4",
    "redis>=7.3.0",
    "uvicorn>=0.41.0",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.3.1",
    "psycopg2-binary>=2.9.11",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "aiosqlite>=0.22.1"]


[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "real_auth: run the test without the automatic auth override",
]
